--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,50 @@
-.vscode/settings.json
+# Virtual Environment
+.venv/
+venv/
+env/
+
+# Video files
+data/roundabout.avi
 traffic_analysis/data/kruhac_orig 3.avi
 
-.venv/
-
+# Output files
 output/
+*.csv
 
-data/roundabout.avi
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# YOLO models
+*.pt
